--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <h1 class="title">2023 신년계획</h1>
     <p class="msg">올해는 꼭 모두 지키자!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1 center">5kg 감량하기!</div>
+        <div class="bucket img1 center done">5kg 감량하기!</div>
         <div class="bucket img2 center">포트폴리오 구상하기</div>
         <div class="bucket img1 center">소비줄이기!</div>
         <div class="bucket img2 center">이사잘하기</div>
