--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
             background-size: cover;
             background-position: center;
         }
+        .done::after {
+            content: "";
+            width: 70%;
+            height: 70%;
+            background-image: url(https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/stamp.png);
+            background-size: cover;
+            background-position: center;
+            position: absolute;
+            top: 20%;
+        }
     </style>
     <link rel="stylesheet" type="text/css" href="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/sparta-bucket2.css">
 </head>
